gcc/testsuite/rust/rustc/ui/loud_ui.rs
// should-fail

// this test ensures that when we forget to use
// any `// { dg-error "" "" { target *-*-* } }

fn main() {}

